# near-colouring

./: LICENSE  README.md  near-colouring.cabal  stack.yaml
app/: Main.hs
src/: Gif.hs  Lib.hs
src/Lib/: ColourSource.hs  ImageConstruction.hs  ImageExport.hs
