name:                near-colouring
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Ornedan/near-colouring#readme
license:             BSD3
license-file:        LICENSE
author:              Heikki Aitakangas
maintainer:          heikki.aitakangas@iki.fi
copyright:           2017 Heikki Aitakangas
category:            Toys
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Lib.ColourSource
--  other-modules:       Lib.ColourSource
  ghc-options:         -O2
  build-depends:       array
                     , AC-Random
                     , base >= 4.7 && < 5
                     , colour
                     , mwc-random
                     , mersenne-random-pure64
                     , primitive >= 0.6.1.0
                     , random
                     , tf-random
                     , vector >= 0.12
  default-language:    Haskell2010

executable near-colouring-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       array
                     , base
                     , cmdargs
                     , near-colouring
                     , random
                     , vector  >= 0.12
                     , AC-Random
                     , mwc-random >= 0.13.6.0
  default-language:    Haskell2010

test-suite near-colouring-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , near-colouring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Ornedan/near-colouring
